# agno-llmwiki

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  chat.py  compose.yml  main.py  pyproject.toml  tools.py
app/: main.py
app/agents/: wiki_agent.py
app/api/chat/: controller.py  routes.py  schema.py
app/api/docs/: controller.py  routes.py  schema.py
app/core/: config.py  prompts.py
app/knowledge/: provider.py
app/services/: chat_service.py  indexer_service.py  knowledge_service.py
app/tools/: markdown_tools.py
app/workers/: vault_watcher.py
config/: config.py  knowledge.py  prompts.py
services/: chat_service.py  knowledge_service.py
tests/: conftest.py
tests/api/: test_chat.py
tests/services/: test_indexer.py
vault_examples/estudos/: spec_driven_development.md
vault_examples/projetos/: nexus_arquitetura.md
