[project]
name = "agno-llmwiki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.6.4",
    "fastapi>=0.104.0",
    "pydantic-settings>=2.14.0",
    "uvicorn>=0.24.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.311",
]

[tool.ruff]
line-length = 88
target-version = "py314"
exclude = ["build", "dist", ".venv", "venv", "__pycache__", ".git"]

[tool.isort]
profile = "black"
line_length = 88

# Configurações de linting para Ruff
[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["UP046"]  # Ignore Generic subclass rule for compatibility with blue formatter
